@@ -17,7 +17,7 @@
 #
 # You should have received a copy of the GNU General Public License
 # along with Labyrinth; if not, write to the Free Software
-# Foundation, Inc., 51 Franklin St, Fifth Floor, 
+# Foundation, Inc., 51 Franklin St, Fifth Floor,
 # Boston, MA  02110-1301  USA
 #
 
@@ -28,7 +28,125 @@ import utils
 import xml.dom.minidom as dom
 
 class Link (gobject.GObject):
-	
+
+	def __init__ (self, save, parent = None, child = None, start_coords = None, end_coords = None):
+		super (Link, self).__init__()
+		self.parent = parent
+		self.child = child
+		self.end = end_coords
+		self.start = start_coords
+		self.strength = 2
+		self.element = save.createElement ("link")
+
+		if parent and child:
+			self.find_ends ()
+
+	def get_save_element (self):
+		return self.element
+
+	def includes (self, coords, mode):
+		# TODO: Change this to make link selection work.  Also needs
+		# some fairly large changes in MMapArea
+		return False
+
+	def connects (self, thought, thought2):
+		return (self.parent == thought and self.child == thought2) or \
+				(self.child == thought2 and self.parent == thought)
+
+	def set_end (self, coords):
+		self.end = coords
+
+	def change_strength (self, thought, thought2):
+		if not self.connnects (thought, thought2):
+			return False
+		if self.parent == thought:
+			self.strength += 1
+		else:
+			self.strength -= 1
+		if self.strength == 0:
+			return False
+		return True
+
+	def set_child (self, child):
+		self.child = child
+		self.find_ends ()
+
+	def uses (self, thought):
+		return self.parent == thought or self.child == thought
+
+	def draw (self, context):
+		if not self.start or not self.end:
+			return
+		cwidth = context.get_line_width ()
+		context.set_line_width (self.strength)
+		context.move_to (self.start[0], self.start[1])
+		context.line_to (self.end[0], self.end[1])
+		context.stroke ()
+		context.set_line_width (cwidth)
+
+	def export (self, context, move_x, move_y):
+		rem = False
+		if not self.start or not self.end:
+			self.find_ends ()
+			rem = True
+		cwidth = context.get_line_width ()
+		context.set_line_width (self.strength)
+		context.move_to (self.start[0]+move_x, self.start[1]+move_y)
+		context.line_to (self.end[0]+move_x, self.end[1]+move_y)
+		context.stroke ()
+		context.set_line_width (cwidth)
+		if rem:
+			self.start = self.end = None
+
+	def set_parent_child (self, parent, child):
+		self.parent = parent
+		self.child = child
+		self.find_ends ()
+
+	def update_save (self):
+		self.element.setAttribute ("start", str(self.start))
+		self.element.setAttribute ("end", str(self.end))
+		self.element.setAttribute ("strength", str(self.strength))
+		if self.child:
+			self.element.setAttribute ("child", str(self.child.identity))
+		else:
+			self.element.setAttribute ("child", "None")
+		if self.parent:
+			self.element.setAttribute ("parent", str(self.parent.identity))
+		else:
+			self.element.setAttribute ("parent", "None")
+
+	def load_data (self, node):
+		self.parent_number = self.child_number = -1
+		tmp = node.getAttribute ("end")
+		if not tmp:
+			print "No tmp found"
+			return
+		self.end = utils.parse_coords (tmp)
+		tmp = node.getAttribute ("start")
+		if not tmp:
+			print "No start found"
+			return
+		self.start = utils.parse_coords (tmp)
+		self.strength = int(node.getAttribute ("strength"))
+		if node.hasAttribute ("parent"):
+			tmp = node.getAttribute ("parent")
+			if tmp == "None":
+				self.parent_number = -1
+			else:
+				self.parent_number = int (tmp)
+		if node.hasAttribute ("child"):
+			tmp = node.getAttribute ("child")
+			if tmp == "None":
+				self.child_number = -1
+			else:
+				self.child_number = int (tmp)
+
+
+
+
+class LinkOld (gobject.GObject):
+
 	def __init__ (self, parent = None, child = None, element=None, from_coords = None, load=None):
 		super (Link, self).__init__()
 		self.parent = parent
@@ -39,24 +157,24 @@ class Link (gobject.GObject):
 		self.strength = 2
 		if load:
 			self.load_data (load)
-	
+
 	def connects (self, parent, child):
 		if (self.parent == parent and self.child == child) or \
 			(self.child == parent and self.parent == child):
 			return True
 		return False
-		
+
 	def update (self, export=False):
 		(self.start, self.end) = self.parent.find_connection (self.child, export)
 
 	def set_new_end (self, coords):
 		self.end = coords
-	
+
 	def uses (self, thought):
 		if self.parent == thought or self.child == thought:
 			return True
-		return False	
-	
+		return False
+
 	def draw (self, context):
 		if not self.start or not self.end:
 			return
@@ -66,7 +184,7 @@ class Link (gobject.GObject):
 		context.line_to (self.end[0], self.end[1])
 		context.stroke ()
 		context.set_line_width (cwidth)
-	
+
 	def export (self, context, move_x, move_y):
 		rem = False
 		if not self.start or not self.end:
@@ -80,7 +198,7 @@ class Link (gobject.GObject):
 		context.set_line_width (cwidth)
 		if rem:
 			self.start = self.end = None
-			
+
 	def mod_strength (self, parent, child):
 		if self.parent == parent:
 			self.strength += 1
@@ -102,7 +220,7 @@ class Link (gobject.GObject):
 			self.element.setAttribute ("parent", str(self.parent.identity))
 		else:
 			self.element.setAttribute ("parent", "None")
-		
+
 	def load_data (self, node):
 		self.parent_number = self.child_number = -1
 		tmp = node.getAttribute ("end")
@@ -132,4 +250,3 @@ class Link (gobject.GObject):
 	def set_ends (self, parent, child):
 		self.parent = parent
 		self.child = child
-		
